Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60529

Chart doesn't resize after hiding axis labels

XMLWordPrintable

    • 11e785a4a67a89999fd15124e418ff324c375224 (qt/qtcharts/dev)

      Charts can have axes with labels, which are then used to calculate chart layout. After hiding the labels, the layout should be adjusted to the empty space which now became available. Right now, it doesn't - the chart shows empty space when the labels used to be.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            oulu_hillbilly Sami Varanka
            krojew Kamil Rojewski
            Votes:
            3 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes