Fix: Resize chart after hiding axis labels

Modified sizehint in each axis to ignore label
size if labels are not visible.

Fixes: QTBUG-60529
Change-Id: Ib4a69f95a23f42849ff13f0d24f7799f84f87c6a
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>