src/charts/axis/barcategoryaxis/chartbarcategoryaxisx.cpp
@@ -121,20 +121,28 @@ QSizeF ChartBarCategoryAxisX::sizeHint(Qt::SizeHint which, const QSizeF &constra
 
     switch (which) {
     case Qt::MinimumSize: {
-        QRectF boundingRect = ChartPresenter::textBoundingRect(axis()->labelsFont(),
-                                                               QStringLiteral("..."),
-                                                               axis()->labelsAngle());
-        height = boundingRect.height() + labelPadding() + base.height() + 1.0;
+        if (labelsVisible()) {
+            QRectF boundingRect = ChartPresenter::textBoundingRect(axis()->labelsFont(),
+                                                                   QStringLiteral("..."),
+                                                                   axis()->labelsAngle());
+            height = boundingRect.height() + labelPadding() + base.height() + 1.0;
+        } else {
+            height = base.height() + 1.0;
+        }
         sh = QSizeF(width, height);
         break;
     }
     case Qt::PreferredSize:{
-        qreal labelHeight = 0.0;
-        foreach (const QString& s, ticksList) {
-            QRectF rect = ChartPresenter::textBoundingRect(axis()->labelsFont(), s, axis()->labelsAngle());
-            labelHeight = qMax(rect.height(), labelHeight);
+        if (labelsVisible()) {
+            qreal labelHeight = 0.0;
+            foreach (const QString& s, ticksList) {
+                QRectF rect = ChartPresenter::textBoundingRect(axis()->labelsFont(), s, axis()->labelsAngle());
+                labelHeight = qMax(rect.height(), labelHeight);
+            }
+            height = labelHeight + labelPadding() + base.height() + 1.0;
+        } else {
+            height = base.height() + 1.0;
         }
-        height = labelHeight + labelPadding() + base.height() + 1.0;
         sh = QSizeF(width, height);
         break;
     }
