src/charts/axis/barcategoryaxis/chartbarcategoryaxisy.cpp
@@ -119,24 +119,32 @@ QSizeF ChartBarCategoryAxisY::sizeHint(Qt::SizeHint which, const QSizeF &constra
 
     switch (which) {
     case Qt::MinimumSize: {
-        QRectF boundingRect = ChartPresenter::textBoundingRect(axis()->labelsFont(),
-                                                               QStringLiteral("..."),
-                                                               axis()->labelsAngle());
-        width = boundingRect.width() + labelPadding() + base.width() + 1.0;
-        if (base.width() > 0.0)
-            width += labelPadding();
+        if (labelsVisible()) {
+            QRectF boundingRect = ChartPresenter::textBoundingRect(axis()->labelsFont(),
+                                                                   QStringLiteral("..."),
+                                                                   axis()->labelsAngle());
+            width = boundingRect.width() + labelPadding() + base.width() + 1.0;
+            if (base.width() > 0.0)
+                width += labelPadding();
+        } else {
+            width = base.width() + 1.0;
+        }
         sh = QSizeF(width, height);
         break;
     }
     case Qt::PreferredSize:{
-        qreal labelWidth = 0.0;
-        foreach (const QString& s, ticksList) {
-            QRectF rect = ChartPresenter::textBoundingRect(axis()->labelsFont(), s, axis()->labelsAngle());
-            labelWidth = qMax(rect.width(), labelWidth);
+        if (labelsVisible()) {
+            qreal labelWidth = 0.0;
+            foreach (const QString& s, ticksList) {
+                QRectF rect = ChartPresenter::textBoundingRect(axis()->labelsFont(), s, axis()->labelsAngle());
+                labelWidth = qMax(rect.width(), labelWidth);
+            }
+            width = labelWidth + labelPadding() + base.width() + 1.0;
+            if (base.width() > 0.0)
+                width += labelPadding();
+        } else {
+            width = base.width() + 1.0;
         }
-        width = labelWidth + labelPadding() + base.width() + 1.0;
-        if (base.width() > 0.0)
-            width += labelPadding();
         sh = QSizeF(width, height);
         break;
     }
