src/charts/axis/logvalueaxis/chartlogvalueaxisx.cpp
@@ -115,26 +115,36 @@ QSizeF ChartLogValueAxisX::sizeHint(Qt::SizeHint which, const QSizeF &constraint
 
     switch (which) {
     case Qt::MinimumSize:{
-        QRectF boundingRect = ChartPresenter::textBoundingRect(axis()->labelsFont(),
-                                                               QStringLiteral("..."),
-                                                               axis()->labelsAngle());
-        width = boundingRect.width() / 2.0;
-        height = boundingRect.height() + labelPadding() + base.height() + 1.0;
+        if (labelsVisible()) {
+            QRectF boundingRect = ChartPresenter::textBoundingRect(axis()->labelsFont(),
+                                                                   QStringLiteral("..."),
+                                                                   axis()->labelsAngle());
+            width = boundingRect.width() / 2.0;
+            height = boundingRect.height() + labelPadding() + base.height() + 1.0;
+        } else {
+            width = 0;
+            height = base.height() + 1.0;
+        }
         sh = QSizeF(width, height);
         break;
     }
     case Qt::PreferredSize: {
-        qreal labelHeight = 0.0;
-        qreal firstWidth = -1.0;
-        foreach (const QString& s, ticksList) {
-            QRectF rect = ChartPresenter::textBoundingRect(axis()->labelsFont(), s, axis()->labelsAngle());
-            labelHeight = qMax(rect.height(), labelHeight);
-            width = rect.width();
-            if (firstWidth < 0.0)
-                firstWidth = width;
+        if (labelsVisible()) {
+            qreal labelHeight = 0.0;
+            qreal firstWidth = -1.0;
+            foreach (const QString& s, ticksList) {
+                QRectF rect = ChartPresenter::textBoundingRect(axis()->labelsFont(), s, axis()->labelsAngle());
+                labelHeight = qMax(rect.height(), labelHeight);
+                width = rect.width();
+                if (firstWidth < 0.0)
+                    firstWidth = width;
+            }
+            height = labelHeight + labelPadding() + base.height() + 1.0;
+            width = qMax(width, firstWidth) / 2.0;
+        } else {
+            height = base.height() + 1.0;
+            width = 0;
         }
-        height = labelHeight + labelPadding() + base.height() + 1.0;
-        width = qMax(width, firstWidth) / 2.0;
         sh = QSizeF(width, height);
         break;
     }
